src/objects/ProcessedProduct__c.object
<CustomObject>
    <fields>
        <fullName>ItemProdcutRef__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>原材料</label>
        <referenceTo>AccountMaster__c</referenceTo>
        <relationshipLabel>加工品</relationshipLabel>
        <relationshipName>ItemProcessedProdcutRef</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductRef__c</fullName>
        <label>完成商品</label>
        <referenceTo>AccountMaster__c</referenceTo>
        <relationshipLabel>加工品（原材料）</relationshipLabel>
        <relationshipName>ProcessedProductRef</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Usage__c</fullName>
        <label>使用量</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>加工品</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ProductRef__c</columns>
        <columns>ItemProdcutRef__c</columns>
        <columns>Usage__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>PP-{00000000}</displayFormat>
        <label>No#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>